--- a/caisse.html
+++ b/caisse.html
@@ -27,6 +27,7 @@
     var cliquer_pour_etre_aide = false;
 </script>
 <div id="deco">
+    <img id="vase_fleurs" src="image/magasin/vase_fleurs.png" style="position:absolute;width: 11%; left: 18%; bottom: 35%">
     <img id="porte" title="SORTIR" onclick="location='exterieur.html'" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
     <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
     <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
