--- a/tuto_debut2.html
+++ b/tuto_debut2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" style="color: #555555">
 <head>
     <meta charset="UTF-8">
     <title>My Bakery, TUTORIEL</title>
@@ -46,7 +46,7 @@ display: none; margin : auto;
     <span id="output" style="
 font-family: ComicFighter, Georgia; /* on spécifie une autre police standard, au cas où... */
 font-weight:bold;
-font-size:2em;
+font-size:1.5em;
 position:relative;
 top:5px"></span>
 
