--- a/tuto_debut.html
+++ b/tuto_debut.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Bakery, TUTORIEL</title>
+    <link rel="stylesheet" href="load.css">
 </head>
 <style>
     #presentoire:hover{
@@ -15,6 +16,13 @@
 	padding: 0;
 	height: 100%;
 	width: 100%;">
+<div class="main" id="mainCont">
+    <script>document.getElementById("mainCont").classList.add('isLoading')
+    </script>
+    <div class="loader"></div>
+
+
+
 <img src="image/fondfinal.png" style=" position: absolute; width: 100%;height: 100%">
 <img id="fleche_pointeur" title="" src="image/fleche_pointeur.svg" style="transform: scaleY(-1); width: 20%; position:absolute; left: 5%; top: 5%; display: none">
 
@@ -26,7 +34,6 @@
 
 <img src="./image/caisse.png" style="
 position:absolute; width: 13%; top: 70%; left: 15%; transform: scaleX(-1)">
-</div>
 
 <div id="zone2" style="position: relative; width: 700px; height: 600px; "> </div>
 
@@ -124,6 +131,10 @@ function remplir_bulle() {
     }
 
     deplaceSur("zone2")
+
+</script>
+</div>
+<script type="text/javascript" src="load.js">
 
 </script>
 </body>
