--- a/tuto_stock.html
+++ b/tuto_stock.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>My Bakery, TUTORIEL</title>
+    <link rel="stylesheet" href="load.css">
+
 
 </head>
 <body style="    background-image: url('./image/fond_boulangerie.png') ; background-size: cover;
 ">
+<div class="main" id="mainCont">
+    <script>document.getElementById("mainCont").classList.add('isLoading')
+    </script>
+    <div class="loader"></div>
+
+
 <img id="retour" src="image/fleche.svg" style="display:none;position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" onclick="location='caisse.html'">
 <div id="zone2" style="position: absolute;  width: 900px; "> </div>
 
@@ -55,7 +63,9 @@ position:relative;
 top:5px"></span>
 
 </div>
+</div>
 </body>
+
 <script>
     function remplir_bulle(){
         document.getElementById("bulle").style.display = "block"
@@ -139,4 +149,6 @@ top:5px"></span>
 
     deplaceSur("zone2")
 </script>
+<script type="text/javascript" src="load.js">
+
 </html>
