--- a/tuto_magasin.html
+++ b/tuto_magasin.html
@@ -4,8 +4,17 @@
     <title>My Bakery, TUTORIEL</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="menu.css" />
+    <link rel="stylesheet" href="load.css">
+
 </head>
 <body style="text-align: center;background-image: url('image/fond_magasin.jpg'); ">
+
+<div class="main" id="mainCont">
+    <script>document.getElementById("mainCont").classList.add('isLoading')
+    </script>
+    <div class="loader"></div>
+
+
 <img onclick="remplir_bulle()" id="fleche" src="image/next.png" title="SUIVANT" style="display: none; width: 10%; position:absolute;bottom: 10%; right: 10%">
 
 <img id="fleche_pointeur" title="" src="image/fleche_pointeur.svg" style="transform: rotate(90deg); width: 15%; position:absolute; left: 15%; top: 7%; display: none">
@@ -83,6 +92,7 @@ top:5px"></span>
         <td><input type="image" src="image/magasin/spirale.png" style="width: 10em" alt="spirale" id="spirale" value="15" ><br>15 pièces</td>
     </tr>
 </table>
+</div>
 </body>
 <script>
     //quand on clique sur l'image
@@ -251,4 +261,6 @@ top:5px"></span>
         })
         }
 </script>
+<script type="text/javascript" src="load.js">
+
 </html>
