--- a/init.html
+++ b/init.html
@@ -27,8 +27,8 @@
 <input type="button" value="MENU PRINCIPAL" hidden id="menupcp" style="color:#333333;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">
 <div style="display: block; margin : auto;margin-bottom:0.5em;text-align: center; font-size: 5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered ">MY BAKERY</div>
 <div id="body_bky">
-    <a href="creerPartie.html" style="display: block; width : 20em; margin : auto;margin-bottom: 0.5em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" ">NOUVELLE PARTIE</a>
-    <a href="recuperer_compte.html" style="display: block; width : 20em; margin : auto;margin-bottom: 0.5em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" ">IMPORTER UNE PARTIE</a>
+    <a href="creerPartie.html" style="display: block; width : 20em; margin : auto;margin-bottom: 0.5em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333">NOUVELLE PARTIE</a>
+    <a href="recuperer_compte.html" style="display: block; width : 20em; margin : auto;margin-bottom: 0.5em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 3em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333">IMPORTER UNE PARTIE</a>
 </div>
 <div class="survol">
     <div class="bulle">
